<resources>
    <string name="app_name">New User Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_register">Register</string>
    <string name="string_already_registered">Already registered?</string>
    <string name="button_login">Login</string>
</resources>